[gd_scene load_steps=8 format=3 uid="uid://celyvbyyaesrj"]

[ext_resource type="Script" path="res://characters/player.gd" id="1_x0n11"]
[ext_resource type="PackedScene" uid="uid://bwg2hqd66desv" path="res://helpers/terrain_detector.tscn" id="2_qq8oy"]
[ext_resource type="Texture2D" uid="uid://dg2c8g3sdnq58" path="res://assets/player.png" id="3_s3o74"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f24bi"]
size = Vector2(14, 5.18473)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u0han"]
size = Vector2(18, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvo7y"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fp4ew"]
size = Vector2(41, 34)

[node name="player" type="CharacterBody2D"]
floor_constant_speed = true
safe_margin = 0.1
script = ExtResource("1_x0n11")

[node name="Camera2D" type="Camera2D" parent="."]
editor_draw_limits = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -16)
texture = ExtResource("3_s3o74")

[node name="crate_detector" type="Area2D" parent="."]
position = Vector2(0, -32)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="crate_detector"]
position = Vector2(0, 0.592367)
shape = SubResource("RectangleShape2D_f24bi")

[node name="terrain_detector" parent="." node_paths=PackedStringArray("detector_shape") instance=ExtResource("2_qq8oy")]
detector_shape = NodePath("DetectorShape")

[node name="DetectorShape" type="CollisionShape2D" parent="terrain_detector"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_u0han")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_kvo7y")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.12
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.06
one_shot = true

[node name="RightCast" type="RayCast2D" parent="."]
position = Vector2(0, -16)
target_position = Vector2(10, 0)

[node name="LeftCast" type="RayCast2D" parent="."]
position = Vector2(0, -16)
target_position = Vector2(-10, 0)

[node name="UpCast" type="RayCast2D" parent="."]
position = Vector2(0, -16)
target_position = Vector2(0, -18)

[node name="DownCast" type="RayCast2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(1.00733, 0.993972)
target_position = Vector2(0, 18)
collision_mask = 3

[node name="Direction" type="Marker2D" parent="."]

[node name="ActionableFinder" type="Area2D" parent="Direction"]
position = Vector2(0, -16)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/ActionableFinder"]
position = Vector2(11.5, 0)
shape = SubResource("RectangleShape2D_fp4ew")

[connection signal="body_shape_entered" from="crate_detector" to="." method="_on_crate_detector_body_shape_entered"]
[connection signal="body_shape_exited" from="crate_detector" to="." method="_on_crate_detector_body_shape_exited"]
[connection signal="terrain_entered" from="terrain_detector" to="." method="_on_terrain_detector_terrain_entered"]
